--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
       <div class="col-md-5 col-lg-5 col-xl-5">
         <div class="container1 project-items">
-          <img src="/img/Sample_Project_1.jpg" alt="Avatar" class="image">
+          <img src="img/Sample_Project_1.jpg" alt="Avatar" class="image">
           <div class="overlay">
             <div class="text"><a href="https://istianreid.github.io/Cems.ph/" target="_blank">Click Here To Visit The Site</a></div>
           </div>
@@ -228,7 +228,7 @@
       
       <div class="col-md-5 col-lg-5 col-xl-5">
         <div class="container1 project-items">
-          <img src="/img/Sample_Project_2.jpg" alt="Avatar" class="image">
+          <img src="img/Sample_Project_2.jpg" alt="Avatar" class="image">
           <div class="overlay ">
             <div class="text"><a href="http://foodies-istian-tech.stackstaging.com/" target="_blank">Click Here To Visit The Site</a></div>
           </div>
@@ -237,7 +237,7 @@
 
       <div class="col-md-5 col-lg-5 col-xl-5">
         <div class="container1 project-items">
-          <img src="/img/Sample_Project_3.jpg" alt="Avatar" class="image">
+          <img src="img/Sample_Project_3.jpg" alt="Avatar" class="image">
           <div class="overlay">
             <div class="text"><a href="https://istianreid.github.io/Visla-Cloned-Website/" target="_blank">Click Here To Visit The Site</a></div>
           </div>
@@ -246,7 +246,7 @@
       
       <div class="col-md-5 col-lg-5 col-xl-5">
         <div class="container1 project-items">
-          <img src="/img/Sample_Project_4.jpg" alt="Avatar" class="image">
+          <img src="img/Sample_Project_4.jpg" alt="Avatar" class="image">
           <div class="overlay">
             <div class="text"><a href="https://bloodmatchclient.herokuapp.com/" target="_blank">Click Here To Visit The Site</a></div>
           </div>
