--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <div class="row justify-content-center align-items-center justify-content-lg-start">
 
       
-      <div class="col-12 col-md-12 col-lg-6 contact-maps"></div>
+      <div class="col-12 col-md-12 col-lg-6 contact-maps" style="background-image: url(./img/Map.jpg);"></div>
 
       <div class=" col-md-12 col-lg-6 container row justify-content-center">
 
